# archive-djazz

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  manage.py  pyproject.toml  requirements.in  requirements.txt
accounts/: admin.py  forms.py  models.py
cms/: models.py  urls.py  views.py
cms/api/: __init__.py
cms/migrations/: 0001_initial.py  0003_alter_post_seo_keywords_alter_post_seo_title.py  0006_category_created_at_category_updated_at_and_more.py
core/: urls.py  views.py
core/templates/core/: coming-soon.html  welcome.html
data/: README.md
djazz/: __init__.py  asgi.py  celery.py  compose.prod.yaml  settings.py  urls.py  wsgi.py
djazz/accounts/: models.py
djazz/accounts/migrations/: 0001_initial.py  0002_rename_name_user_fullname.py
djazz/cms/: admin.py
djazz/cms/migrations/: 0002_category_seo_description_category_seo_keywords_and_more.py  0004_alter_post_seo_keywords_alter_post_seo_title.py  0005_alter_category_options_alter_tag_options_and_more.py
djazz/djazz/: __init__.py  celery.py  settings.py  urls.py
djazz/static/: readme.md
djazz/templates/cms/: default.html
docs/: branching.md  discord.md  git-flow.md  pyproject.toml.md
docs/releases/: template.md  v0.1.md
requirements/: base.in  base.txt  dev.txt
scripts/: __init__.py  entrypoint.prod.sh  entrypoint.sh  services.sh
